Test Sandbox Project/src/objects/Agent_Achievement_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Achievement</label>
        <referenceTo>Agent_Achievement__c</referenceTo>
        <relationshipLabel>Agent Achievement Detail</relationshipLabel>
        <relationshipName>Agent_Achievement_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Scheduling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Scheduling</label>
        <referenceTo>Agent_Scheduling__c</referenceTo>
        <relationshipLabel>Agent Achievement Detail</relationshipLabel>
        <relationshipName>Agent_Achievement_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Late__c</fullName>
        <formula>Agent_Scheduling__r.Late__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance_Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_UL__c</fullName>
        <formula>Agent_Scheduling__r.Shift_UL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance UL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Chat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Chat</label>
        <referenceTo>Case_Chat__c</referenceTo>
        <relationshipLabel>Agent Achievement Detail</relationshipLabel>
        <relationshipName>Agent_Achievement_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Productivity_Count__c</fullName>
        <formula>IF ( ISBLANK( Case_Chat__c  ) , 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Data__c</fullName>
        <label>Type Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training Score</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>CSAT</fullName>
                </value>
                <value>
                    <fullName>QA Score</fullName>
                </value>
                <value>
                    <fullName>Hold Time</fullName>
                </value>
                <value>
                    <fullName>Response Time</fullName>
                </value>
                <value>
                    <fullName>Resolved Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent Achievement Detail</label>
    <nameField>
        <displayFormat>AAD-{00000000}</displayFormat>
        <label>Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Achievement Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>